--- a/src/styles.css
+++ b/src/styles.css
@@ -1,12 +1,26 @@
 /* Add application styles & imports to this file! */
 @import "~@angular/material/prebuilt-themes/indigo-pink.css";
 
-
-html, body { 
+html,
+body {
   height: 100%;
- }
+}
 
 body {
-   margin: 0;
-   font-family: Roboto, "Helvetica Neue", sans-serif; 
-  }
+  margin: 0;
+  font-family: Roboto, "Helvetica Neue", sans-serif;
+  background-image: url("./assets/img/background.png");
+}
+
+.navbar {
+  background: linear-gradient(rgb(200, 129, 209), rgb(226, 235, 187));
+  box-shadow: 0px 2px 4px 1px grey;
+  margin-bottom: 4vh;
+  height: 5rem;
+}
+
+.navbar-brand {
+  color: rgb(9, 9, 65);
+  text-shadow: 0px 0px 2px rgb(153, 151, 151);
+  font-size: xx-large;
+}
