--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -6,7 +6,8 @@
     display: grid;
     grid-template-columns: 1fr 1fr;
 
-    background-color: beige;
+    background-color: rgba(245, 245, 220, 0.938);
+    backdrop-filter: blur(2px);
     border: 3px dashed black;
     border-radius: 10px;
 
@@ -20,6 +21,19 @@
     display: grid;
     grid-template-columns: repeat(3, 1fr);
   }
+
+  .content3 {
+    background-color: rgba(245, 245, 220, 0.911);
+    backdrop-filter: blur(2px);
+    border: 3px dashed black;
+    border-radius: 10px;
+  }
+
+  .personagem{
+    background-color: rgba(212, 92, 37, 0.842) !important;
+    color:aliceblue;
+  }
+  
   .score{
     margin-top:.5em;
     margin-left:2em;
@@ -31,8 +45,14 @@
   }
 
   .imagens {
-    width: 10em;
+    width: 100%;
     cursor: pointer;
+  }
+
+  .imagens2{
+    width: 36%;
+    -webkit-filter: drop-shadow(0px 0px 20px  rgb(146, 32, 42));
+    filter: drop-shadow(0px 0px 20px rgb(129, 29, 42));
   }
   .imagens:hover{
     -webkit-filter: drop-shadow(0px 0px 4px  rgb(98, 94, 94));
@@ -42,13 +62,17 @@
   #imagem1:target, #imagem2:target, #imagem3:target{
     -webkit-filter: drop-shadow(0px 0px 20px  rgb(54, 146, 32));
     filter: drop-shadow(0px 0px 20px rgb(32, 129, 29)) hue-rotate(90deg);
+    transition: linear;
   }
 
   .tela-inicial, section {
-    background-color: rgb(245, 242, 229);
+    background-color: rgba(245, 242, 229, 0.924);
+    backdrop-filter: blur(2px);
     border: 3px dashed black;
     border-radius: 10px;
   }
   ul li {
     list-style: none;
+    margin-left: -40px;
   }
+
