--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,18 +3,97 @@
   <div class="card-header">
     <img src="../assets/img/jo-ken-po.png" alt="">
   </div>
-  <h1>Instruções:</h1>
-  <ul>
-    <li>Escolha pedra, tesoura ou papel.</li>
-    <li>Ao clicar em um, o computador também escolherá outro.</li>
-    <li>Compare os dois: Pedra quebra Tesoura, Tesoura corta Papel e Papel embrulha Pedra</li>
-    <li>O resultado aparecerá abaixo se ganhou, perdeu ou empatou.</li>
-  </ul>
-  <button class="btn btn-danger font-weight-bold" (click)="iniciarJogo()">Jogar</button>
+  <p>
+    Originalmente criado na China e muito conhecido no Japão, onde até mesmo temos campeonatos deste jogo, o Jokepô é um
+    jogo que muitas crianças gostam pela facilidade em aprender. O objetivo é sempre o mesmo: derrotar o oponente de
+    acordo com a sua escolha. No Brasil, é popularmente conhecido como "Pedra, Papel e Tesoura", onde a pedra quebra a
+    tesoura, a tesoura rasga o papel e o papel embrulha a pedra.
+  </p>
+  <p>
+    A simplicidade deste jogo permite com que sejam criadas diversas variáveis, de acordo a vontade dos jogadores. Uma
+    grande variável foi citada na série The Big Bang Theory, onde além dos três componentes básicos, são incluídos o
+    lagarto e o Spock (personagem da série Star Trek).
+  </p>
+  <p>
+    Há ainda variações onde incluem lesmas, sapos, etc. A imaginação dos jogadores é o limite para este divertido jogo.
+  </p>
+  <p>
+    Aqui você vai poder jogar a versão brasileira, escolhendo entre três personagens: A Pedra, A Tesoura e O Papel.
+    Clique em jogar para saber mais!
+  </p>
+  <br>
+  <button class="btn btn-danger btn-lg font-weight-bold" (click)="iniciarJogo()">Jogar</button>
 </div>
 
 <!-- Tela do jogo  -->
 <div *ngIf="showTabuleiro">
+  <div class="content3 container mb-4">
+    <div class="row py-4 px-2">
+      <div class="card personagem p-3 col-12 col-md-4 col-lg-3 mx-auto">
+        <img src="../assets/img/pedra.png" class="card-img-top img-fluid px-4">
+        <div class="card-body">
+          <p class="card-text text-justify">PEDRA: Ela é forte, braba e destemida, consegue quebrar tudo que ela vê
+            pela
+            frente, ninguém tem coragem de encarar, a única coisa que pode a derrubar é a sua quedinha
+            pelo
+            seu melhor amigo, o Papel.
+          </p>
+        </div>
+      </div>
+      <div class="card personagem p-3 col-12 col-md-4 col-lg-3">
+        <img src="../assets/img/papel.png" class="card-img-top img-fluid px-4">
+        <div class="card-body">
+          <p class="card-text text-justify">PAPEL: Magro e pálido, sempre foi zoado por todos, até que um dia conheceu
+            a
+            Pedra e tudo mudou, sua vida passou a
+            ser mais divertida. O ponto forte do seu dia, é poder abraçar a sua amiga.
+          </p>
+        </div>
+      </div>
+      <div class="card personagem p-3 col-12 col-md-4 col-lg-3 mx-auto">
+        <img src="../assets/img/tesoura.png" class="card-img-top img-fluid px-4">
+        <div class="card-body">
+          <p class="card-text text-justify">TESOURA: Sempre com inveja da amizade entre Pedra e Papel, a Tesoura vive
+            procurando uma oportunidade
+            para
+            destruir essa relação. Ela tem como meta, um dia, acabar com aquele rascunho insolente.
+          </p>
+        </div>
+      </div>
+    </div>
+
+    <div class="instrucoes row">
+      <div class="col-6 mr-auto ml-auto text-justify">
+        <h2 class="text-center">Como jogar</h2>
+        <ul class="text-center">
+          <li>Escolha o seu lutador entre:
+            <ul>
+              <li>Pedra, a forte</li>
+              <li>Papel, o carinhoso</li>
+              <li>Tesoura, a invejosa</li>
+            </ul>
+          </li>
+          <li>O computador escolherá o oponente!
+          </li>
+
+          <li>Conforme a história, essas são as opções:
+            <ul>
+              <li>Papel abraça a Pedra</li>
+              <li>Pedra bate na Tesoura</li>
+              <li>Tesoura rasga Papel</li>
+            </ul>
+          </li>
+          <li>O ponto será somado ao vencedor. Você escolhe até quanto vai jogar, caso queira recomeçar a
+            pontuação, basta
+            clicar em recomeçar!
+          </li>
+        </ul>
+        <p class="text-center font-weight-bold display-4">Boa sorte!</p>
+      </div>
+
+    </div>
+  </div>
+
   <div class="content mb-4 row container card">
     <!-- Player 1 -->
     <div class="card">
@@ -24,11 +103,14 @@
           <button mat-fab color="primary" class="score">{{ scores[0] }}</button>
         </div>
 
-        <h3 class="my-2"> Escolha pedra, tesoura ou papel: </h3>
+        <h3 class="my-2"> Escolha pedra, tesoura ou papel </h3>
         <div class="content2 mt-3">
-          <a href="#imagem1"><img (click)="pick(0)" id="imagem1" class="imagens img-fluid" src="../assets/img/pedra.png" alt=""></a>
-          <a href="#imagem2"><img (click)="pick(1)" id="imagem2" class="imagens img-fluid ml-2" src="../assets/img/papel.png" alt=""></a>
-          <a href="#imagem3"><img (click)="pick(2)" id="imagem3" class="imagens img-fluid pb-5" src="../assets/img/tesoura.png" alt=""></a>
+          <a href="#imagem1"><img (click)="pick(0)" id="imagem1" class="imagens img-fluid" src="../assets/img/pedra.png"
+              alt=""></a>
+          <a href="#imagem2"><img (click)="pick(1)" id="imagem2" class="imagens img-fluid ml-2"
+              src="../assets/img/papel.png" alt=""></a>
+          <a href="#imagem3"><img (click)="pick(2)" id="imagem3" class="imagens img-fluid pb-5"
+              src="../assets/img/tesoura.png" alt=""></a>
         </div>
 
       </div>
@@ -37,16 +119,16 @@
     <div class="card">
       <div class="card-body">
         <div class="content1">
-          <h2 class="card-title"> Computador:</h2>
+          <h2 class="card-title"> Computador</h2>
           <button mat-fab color="accent" class="score">{{ scores[1] }}</button>
 
         </div>
         <br><br>
 
         <div *ngIf="enemySelected !== -1" class="d-flex justify-content-center">
-          <img *ngIf="enemySelected == 0" class="imagens" src="../assets/img/pedra.png" alt="">
-          <img *ngIf="enemySelected == 1" class="imagens" src="../assets/img/papel.png" alt="">
-          <img *ngIf="enemySelected == 2" class="imagens" src="../assets/img/tesoura.png" alt="">
+          <img *ngIf="enemySelected == 0" class="imagens2" src="../assets/img/pedra.png" alt="">
+          <img *ngIf="enemySelected == 1" class="imagens2" src="../assets/img/papel.png" alt="">
+          <img *ngIf="enemySelected == 2" class="imagens2" src="../assets/img/tesoura.png" alt="">
 
         </div>
 
@@ -56,7 +138,7 @@
 
   </div>
 
-  <section class="container py-2">
+  <section class="container py-2 text-center font-weight-bold">Resultado
     <div *ngIf="!loading && isResultShow" class="d-flex justify-content-center text-center"
       style="flex-direction: column">
       <div [ngSwitch]="theResult">
@@ -72,7 +154,7 @@
         <ng-template ngSwitchDefault> </ng-template>
       </div>
       <p> Escolha outro para continuar ou </p>
-      <button (click)="reset()" mat-raised-button color="primary"> Resetar pontos</button>
+      <button class="btn btn-danger btn-lg" (click)="reset()"> Limpar Pontos</button>
     </div>
 
     <div class="d-flex justify-content-center" *ngIf="loading">
