ajusta palavra errada

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,7 +4,7 @@
     <img src="../assets/img/jo-ken-po.png" alt="">
   </div>
   <p>
-    Originalmente criado na China e muito conhecido no Japão, onde até mesmo temos campeonatos deste jogo, o Jokepô é um
+    Originalmente criado na China e muito conhecido no Japão, onde até mesmo temos campeonatos deste jogo, o Jokenpô é um
     jogo que muitas crianças gostam pela facilidade em aprender. O objetivo é sempre o mesmo: derrotar o oponente de
     acordo com a sua escolha. No Brasil, é popularmente conhecido como "Pedra, Papel e Tesoura", onde a pedra quebra a
     tesoura, a tesoura rasga o papel e o papel embrulha a pedra.
